Revert "added all grass sample pictures to embedded folder"
This reverts commit d10ec7d2292d34cd51193ca253421d5636d18062.

--- a/output/archives.html
+++ b/output/archives.html
@@ -16,7 +16,6 @@
                 <nav><ul>
                     <li><a href="./category/data-viz.html">Data Viz</a></li>
                     <li><a href="./category/main.html">main</a></li>
-                    <li><a href="./category/other.html">Other</a></li>
                 </ul>
                 </nav>
         </header><!-- /#banner -->
@@ -24,9 +23,7 @@
 <h1>Archives for AC Craft - Blog</h1>
 
 <dl>
-    <dt>Thu 07 May 2020</dt>
-    <dd><a href="./grass-census-2020.html">Grass Census 2020</a></dd>
-    <dt>Wed 26 February 2020</dt>
+    <dt>Sat 08 February 2020</dt>
     <dd><a href="./net-generation-by-source.html">Net Generation By Source</a></dd>
     <dt>Sun 25 August 2019</dt>
     <dd><a href="./dc-daily-weather.html">DC Daily Weather</a></dd>
@@ -41,12 +38,14 @@
                             <li><a href="http://getpelican.com/">Pelican</a></li>
                             <li><a href="http://python.org/">Python.org</a></li>
                             <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
+                            <li><a href="#">You can modify those links in your config file</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
+                            <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="https://twitter.com/ace_d0g">Twitter</a></li>
                         </ul>
                 </div><!-- /.social -->
