--- a/output/tags.html
+++ b/output/tags.html
@@ -16,15 +16,12 @@
                 <nav><ul>
                     <li><a href="./category/data-viz.html">Data Viz</a></li>
                     <li><a href="./category/main.html">main</a></li>
-                    <li><a href="./category/other.html">Other</a></li>
                 </ul>
                 </nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for AC Craft - Blog</h1>        <li><a href="./tag/data-viz.html">data viz</a> (2)</li>
-        <li><a href="./tag/grass.html">grass</a> (1)</li>
-        <li><a href="./tag/house.html">house</a> (1)</li>
         <li><a href="./tag/pelican.html">pelican</a> (1)</li>
         <li><a href="./tag/plotly.html">plotly</a> (2)</li>
         <li><a href="./tag/python.html">python</a> (1)</li>
@@ -39,12 +36,14 @@
                             <li><a href="http://getpelican.com/">Pelican</a></li>
                             <li><a href="http://python.org/">Python.org</a></li>
                             <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
+                            <li><a href="#">You can modify those links in your config file</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
+                            <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="https://twitter.com/ace_d0g">Twitter</a></li>
                         </ul>
                 </div><!-- /.social -->
