--- a/output/authors.html
+++ b/output/authors.html
@@ -16,13 +16,12 @@
                 <nav><ul>
                     <li><a href="./category/data-viz.html">Data Viz</a></li>
                     <li><a href="./category/main.html">main</a></li>
-                    <li><a href="./category/other.html">Other</a></li>
                 </ul>
                 </nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on AC Craft - Blog</h1>        <li><a href="./author/ac-craft.html">AC Craft</a> (4)</li>
+    <h1>Authors on AC Craft - Blog</h1>        <li><a href="./author/ac-craft.html">AC Craft</a> (3)</li>
 </section>
 
         <section id="extras" class="body">
@@ -32,12 +31,14 @@
                             <li><a href="http://getpelican.com/">Pelican</a></li>
                             <li><a href="http://python.org/">Python.org</a></li>
                             <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
+                            <li><a href="#">You can modify those links in your config file</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
+                            <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="https://twitter.com/ace_d0g">Twitter</a></li>
                         </ul>
                 </div><!-- /.social -->
