--- a/output/categories.html
+++ b/output/categories.html
@@ -16,7 +16,6 @@
                 <nav><ul>
                     <li><a href="./category/data-viz.html">Data Viz</a></li>
                     <li><a href="./category/main.html">main</a></li>
-                    <li><a href="./category/other.html">Other</a></li>
                 </ul>
                 </nav>
         </header><!-- /#banner -->
@@ -24,7 +23,6 @@
     <ul>
         <li><a href="./category/data-viz.html">Data Viz</a> (2)</li>
         <li><a href="./category/main.html">main</a> (1)</li>
-        <li><a href="./category/other.html">Other</a> (1)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
@@ -33,12 +31,14 @@
                             <li><a href="http://getpelican.com/">Pelican</a></li>
                             <li><a href="http://python.org/">Python.org</a></li>
                             <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
+                            <li><a href="#">You can modify those links in your config file</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
+                            <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="https://twitter.com/ace_d0g">Twitter</a></li>
                         </ul>
                 </div><!-- /.social -->
